<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.androidtesting.MainActivity">

    <EditText
        android:id="@+id/etValue1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/etValue2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="Add"
        android:id="@+id/btnAdd"
        android:onClick="doOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="Subtract"
        android:id="@+id/btnSubtract"
        android:onClick="doOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="Multiply"
        android:id="@+id/btnMultiply"
        android:onClick="doOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="Divide"
        android:id="@+id/btnDivide"
        android:onClick="doOperation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvSolution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:text="Go to Second Activity"
        android:id="@+id/btnStartActivity"
        android:onClick="goToSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>
